# Archer

./: .gitignore  CMakeLists.txt  README.md
src/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  CMakeLists.txt  b.json  client.cpp  main.cpp  server.cpp
src/SimpleClient/: CMakeLists.txt  EasyTcpClient.hpp  client.cpp
src/SimpleServer/: CMakeLists.txt  server.cpp
